--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^5.0.4",
+    "axios": "^1.6.7",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
